# app/controllers/survivors_controller.rb
@@ -1,5 +1,5 @@
 class SurvivorsController < ApplicationController
-	before_action :find_survivor, only: :update
+  before_action :find_survivor, only: :update
 
 	def index 
 		servivors = Survivor.all
@@ -8,33 +8,43 @@ class SurvivorsController < ApplicationController
 		render json: servivors, status: 201
 	end
 
-	def create
-		survivor = Survivor.new(survivor_params)
-		if survivor.save
-			render json: {data: survivor, message: "successfully created"}, status: 201
-		else
-      render json: {errors: survivor.errors.full_messages}, status: 422  
+  def create
+    survivor = Survivor.new(survivor_params)
+    if survivor.save
+      render json: { data: SurvivorSerializer.new(survivor), message: 'successfully created' }, status: 201
+    else
+      render json: { errors: survivor.errors.full_messages }, status: 422
     end
-	end
+  end
 
-	def update
-		return render json: {errors: "infected user"}, status: 422 unless @survivor.infected
+  def update
+    return render json: { errors: 'infected user' }, status: 422 if @survivor.infected
 
-		if @survivor.update(survivor_params)
-			render json: {data: @survivor, message: "successfully updated"}, status: 200
-		else
-			render json: {errors: @survivor.errors.full_messages}, status: 422
-		end
-	end
+    if @survivor.update(survivor_params)
+      render json: { data: SurvivorSerializer.new(@survivor), message: 'successfully updated' }, status: 200
+    else
+      render json: { errors: @survivor.errors.full_messages }, status: 422
+    end
+  end
 
-	private
+  def report
+    render json: {	messages: 'Report Generated',
+                   	infected_survivours: Survivor.survivor_percentage(Survivor.infected_count).to_s+"%" ,
+                   	non_infected_survivors: Survivor.survivor_percentage(Survivor.non_infected_count).to_s+"%",
+                   	resource_average_amount_per_survivor: Survivor.average_item_amounts,
+                   	infected_survivor_lost_point: Survivor.total_points_lost_per_item 
+                  }
+  end
 
-	def find_survivor
-		@survivor = Survivor.find_by_id(params[:id])
-		return render json: {errors: "survivor not found"}, status: :not_found unless @survivor
-	end
+  private
 
-	def survivor_params
-		params.require(:survivor).permit(:name, :age, :gender, :latitude, :longitude, items_attributes: [:item, :points, :quantity])
-	end
+  def find_survivor
+    @survivor = Survivor.find_by(id: params[:id])
+    render json: { errors: 'survivor not found' }, status: :not_found unless @survivor
+  end
+
+  def survivor_params
+    params.require(:survivor).permit(:name, :age, :gender, :latitude, :longitude,
+                                     items_attributes: %i[item points quantity])
+  end
 end
