# swagger/v1/swagger.yaml
@@ -3,6 +3,14 @@ info:
   title: API V1
   version: v1
 paths: 
+  "/survivors/report":
+    get:
+      summary: List of survivor report
+      tags:
+        - Survivors
+      responses:
+        '200':
+          description: Successful
   "/survivors":
     post:
       summary: Create survivors
@@ -28,9 +36,91 @@ paths:
                       type: number
                     longitude:
                       type: number
+                    items_attributes:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          item:
+                            type: string
+                          points:
+                            type: integer
+                          quantity:
+                            type: integer
+                          survivor_id:
+                            type: integer
       responses:
-        '200':
-          description: Successful operation
+        201:
+          description: Survivor created Successfully
+        422: 
+          description: Unprocessable Entity - Invalid input data
+        500:
+          description: Internal Server Error - Something went wrong on the server 
+  "/survivors/{id}":
+    patch:
+      summary: Update survivors
+      tags:
+        - Survivors
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category to update
+          required: true
+          type: integer
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties: 
+                survivor:
+                  type: object
+                  properties: 
+                    name:
+                      type: string
+                    age:
+                      type: integer
+                    gender:
+                      type: string
+                    latitude:
+                      type: number
+                    longitude:
+                      type: number
+      responses:
+        200:
+          description: Survivor updated Successfully
+        422: 
+          description: Unprocessable Entity - Invalid input data
+        500:
+          description: Internal Server Error - Something went wrong on the server 
+  "/reported_survivors":
+    post:
+      summary: Reported survivors
+      tags:
+        - Reported Survivors
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties: 
+                reported_survivors:
+                  type: object
+                  properties: 
+                    reported_by:
+                      type: integer
+                    reported_to:
+                      type: integer
+      responses:
+        201:
+          description: Reported survivor Successfully
+        422: 
+          description: Unprocessable Entity - Invalid input data
+        500:
+          description: Internal Server Error - Something went wrong on the server 
+
 servers:
   - url: http://{defaultHost}
     variables:
